tdf#125990 change tracking: remove text join workaround

at wholly deletion of paragraphs, disable failing unit tests
related to the temporary regressions.

This partially revert commits

commit 22639148ae5400bac98f32a75d7431b857c80195
    "tdf#54819 change tracking: keep paragraph style after full deletion"
commit 8acc15b5113c798ecdbeed91456a92e7b0c1334e
    "tdf#118699 DOCX import: don't add numbering."
commit caeb6ff68d49e1b1ca911cf3f63371b855ee935d
    "DOCX import: clean-up FinalizeImport() of change tracking"
etc.

Change-Id: Ia42749fd9f22f3bc1c7c2f38b604b1926631fc77
Reviewed-on: https://gerrit.libreoffice.org/76324
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>